[+] 前端：提供全局的事件通信机制/新增物品列表组件。

--- a/fe/src/style/common.less
+++ b/fe/src/style/common.less
@@ -1,3 +1,4 @@
+@import './color.less';
 .text-ellipsis {
   overflow: hidden;
   text-overflow: ellipsis;
@@ -10,4 +11,16 @@
    height: 0; 
    clear: both; 
    visibility: hidden;  
+}
+.normal{
+	color: @navsub;
+}
+.rare{
+	color: @a5;
+}
+.epic{
+	color: @co16;
+}
+.lengendary{
+	color:@co17;
 }
