[+] 添加项目列表页、详情页

--- a/fe/src/style/color.less
+++ b/fe/src/style/color.less
@@ -6,6 +6,11 @@
 @black:rgb(51,51,51);
 @lighterblack:rgb(81,81,81);
 
+@creating:#CCFC62;
+@developing:#9FF048;
+@online:#25C6FC;
+@finished:#DE8100;
+
 @line:#e5e5e5;
 @navtext:#f3efe0;
 @white:#FFF;
